--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/real-time-code-editor
+MONGO_URI=mongodb+srv://tharunkunamalla7_db_user:tharun701@cluster0.c1jxg0t.mongodb.net/?appName=Cluster0
 JWT_SECRET=supersecretkey123
