--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,17 @@ services:
       - mongo-data:/data/db
     restart: always
 
+  mongo-express:
+    image: mongo-express:latest
+    container_name: codesync-mongo-express
+    restart: always
+    ports:
+      - "8081:8081"
+    environment:
+      - ME_CONFIG_MONGODB_URL=mongodb://mongo:27017/codesync
+    depends_on:
+      - mongo
+
 volumes:
   mongo-data:
   piston-data:
